--- a/src/app/frontend-search-function/frontend-search-function.component.html
+++ b/src/app/frontend-search-function/frontend-search-function.component.html
@@ -1,13 +1,13 @@
-<mat-form-field>
-    <mat-label>Swapi Categories</mat-label>
-    <mat-select>
-        <mat-option value="people">people</mat-option>
-        <mat-option value="starships">ships</mat-option>
-        <mat-option value="films">films</mat-option>
-    </mat-select>
-</mat-form-field>
-      
 <form class="example-form">
+    <mat-form-field>
+        <mat-label>Swapi Categories</mat-label>
+        <mat-select value=" ">
+            <mat-option value="people">people</mat-option>
+            <mat-option value="starships">ships</mat-option>
+            <mat-option value="films">films</mat-option>
+        </mat-select>
+    </mat-form-field>
+      
     <mat-form-field class="example-full-width">
         <input matInput placeholder="Favorite food" value="">
     </mat-form-field>
