working on data binding

--- a/src/app/frontend-search-function/frontend-search-function.component.html
+++ b/src/app/frontend-search-function/frontend-search-function.component.html
@@ -1,7 +1,7 @@
 <form class="example-form">
     <mat-form-field>
         <mat-label>Swapi Categories</mat-label>
-        <mat-select value=" ">
+        <mat-select value="" required="required" [(value)]="url.group">
             <mat-option value="people">people</mat-option>
             <mat-option value="starships">ships</mat-option>
             <mat-option value="films">films</mat-option>
@@ -9,8 +9,9 @@
     </mat-form-field>
       
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="Favorite food" value="">
+        <input matInput placeholder="Search" value="" required="required" [(value)]="url.search">
     </mat-form-field>
+    <button (click)="onSubmit()" type="submit">Submit</button>
 </form>
       
       
