--- a/src/app/frontend-search-function/frontend-search-function.component.html
+++ b/src/app/frontend-search-function/frontend-search-function.component.html
@@ -9,7 +9,7 @@
     </mat-form-field>
       
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="Search" value="" required="required" [(value)]="url.search">
+        <input matInput placeholder="Search" required="required" name="search" [(ngModel)]="url.search">
     </mat-form-field>
     <button (click)="onSubmit()" type="submit">Submit</button>
 </form>
