--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,1 +1,10 @@
 <p>card works!</p>
+<div _ngcontent-bow-c2="" id="displayDiv">
+    <div _ngcontent-bow-c2="" id="card">
+        <h3 _ngcontent-bow-c2="">People</h3>
+        <hr _ngcontent-bow-c2="">
+        <p _ngcontent-bow-c2="">name:  </p>
+        <p _ngcontent-bow-c2="">height: 0</p>
+        <p _ngcontent-bow-c2="">mass: 0</p>
+        <p _ngcontent-bow-c2="">hair color:  </p>
+        <p _ngcontent-bow-c2="">skin color:  </p><p _ngcontent-bow-c2="">eye color:  </p><p _ngcontent-bow-c2="">birth year:  </p><p _ngcontent-bow-c2="">gender:  </p><p _ngcontent-bow-c2="">homeworld: </p></div><div _ngcontent-bow-c2="" id="card"><h3 _ngcontent-bow-c2="">Films</h3><hr _ngcontent-bow-c2=""><p _ngcontent-bow-c2="">Title:  </p><p _ngcontent-bow-c2="">Episode Id: 0 </p><p _ngcontent-bow-c2="">Opening Crawl:  </p><p _ngcontent-bow-c2="">Director:  </p><p _ngcontent-bow-c2="">Producer:  </p><p _ngcontent-bow-c2="">Release date:  </p><p _ngcontent-bow-c2=""></p></div><div _ngcontent-bow-c2="" id="card"><h3 _ngcontent-bow-c2="">Ship</h3><hr _ngcontent-bow-c2=""><p _ngcontent-bow-c2="">Ship name:  </p><p _ngcontent-bow-c2="">Model:  </p><p _ngcontent-bow-c2="">Cost in credits: 0 </p><p _ngcontent-bow-c2="">Length: 0 </p><p _ngcontent-bow-c2="">Max atmospheric speed: 0 </p><p _ngcontent-bow-c2="">Crew: 0 </p><p _ngcontent-bow-c2=""> Passengers: 0 </p><p _ngcontent-bow-c2="">Cargo capacity: 0 </p><p _ngcontent-bow-c2="">Consumables:  </p><p _ngcontent-bow-c2="">Hyperdrive rating: 0 </p><p _ngcontent-bow-c2="">mglt: 0 </p></div></div>
