--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,10 +1,44 @@
 <p>card works!</p>
-<div _ngcontent-bow-c2="" id="displayDiv">
-    <div _ngcontent-bow-c2="" id="card">
-        <h3 _ngcontent-bow-c2="">People</h3>
-        <hr _ngcontent-bow-c2="">
-        <p _ngcontent-bow-c2="">name:  </p>
-        <p _ngcontent-bow-c2="">height: 0</p>
-        <p _ngcontent-bow-c2="">mass: 0</p>
-        <p _ngcontent-bow-c2="">hair color:  </p>
-        <p _ngcontent-bow-c2="">skin color:  </p><p _ngcontent-bow-c2="">eye color:  </p><p _ngcontent-bow-c2="">birth year:  </p><p _ngcontent-bow-c2="">gender:  </p><p _ngcontent-bow-c2="">homeworld: </p></div><div _ngcontent-bow-c2="" id="card"><h3 _ngcontent-bow-c2="">Films</h3><hr _ngcontent-bow-c2=""><p _ngcontent-bow-c2="">Title:  </p><p _ngcontent-bow-c2="">Episode Id: 0 </p><p _ngcontent-bow-c2="">Opening Crawl:  </p><p _ngcontent-bow-c2="">Director:  </p><p _ngcontent-bow-c2="">Producer:  </p><p _ngcontent-bow-c2="">Release date:  </p><p _ngcontent-bow-c2=""></p></div><div _ngcontent-bow-c2="" id="card"><h3 _ngcontent-bow-c2="">Ship</h3><hr _ngcontent-bow-c2=""><p _ngcontent-bow-c2="">Ship name:  </p><p _ngcontent-bow-c2="">Model:  </p><p _ngcontent-bow-c2="">Cost in credits: 0 </p><p _ngcontent-bow-c2="">Length: 0 </p><p _ngcontent-bow-c2="">Max atmospheric speed: 0 </p><p _ngcontent-bow-c2="">Crew: 0 </p><p _ngcontent-bow-c2=""> Passengers: 0 </p><p _ngcontent-bow-c2="">Cargo capacity: 0 </p><p _ngcontent-bow-c2="">Consumables:  </p><p _ngcontent-bow-c2="">Hyperdrive rating: 0 </p><p _ngcontent-bow-c2="">mglt: 0 </p></div></div>
+<div  id="displayDiv">
+    <div  id="card">
+        <h3 >People</h3>
+        <hr >
+        <p >name:{{name}} </p>
+        <p >height: {{height}} </p>
+        <p >mass: {{mass}} </p>
+        <p >hair color: {{hair_color}} </p>
+        <p >skin color: {{skin_color}} </p>
+        <p >eye color: {{eye_color}}  </p>
+        <p >birth year: {{birth_year}}  </p>
+        <p >gender: {{gender}}  </p>
+        <p >homeworld: </p>
+    </div>
+
+    <div  id="card">
+        <h3 >Films</h3>
+        <hr >
+        <p >Title: {{title}}  </p>
+        <p >Episode Id: {{episode_id}} </p>
+        <p >Opening Crawl: {{opening_crawl}} </p>
+        <p >Director: {{director}} </p>
+        <p >Producer: {{producer}} </p>
+        <p >Release date: {{release_date}} </p>
+        <p ></p>
+    </div>
+
+        <div  id="card">
+            <h3 >Ship</h3>
+            <hr >
+            <p >Ship name: {{ship_name}}  </p>
+            <p >Model: {{model}}  </p>
+            <p >Cost in credits: {{cost_in_credits}} </p>
+            <p >Length: {{length}} </p>
+            <p >Max atmospheric speed: {{max_atmospheric_speed}} </p>
+            <p >Crew: {{crew}} </p>
+            <p > Passengers: {{passengers}} </p>
+            <p >Cargo capacity: {{cargo_capacity}} </p>
+            <p >Consumables: {{consumables}}  </p>
+            <p >Hyperdrive rating: {{hyperdrive_rating}} </p>
+            <p >mglt: {{mglt}} </p>
+        </div>
+    </div>
