--- a/src/app/frontend-search-function/frontend-search-function.component.html
+++ b/src/app/frontend-search-function/frontend-search-function.component.html
@@ -1,6 +1,6 @@
 <form class="example-form">
     <mat-form-field>
-        <mat-label>Swapi Categories</mat-label>
+        <mat-label>Category</mat-label>
         <mat-select value="" required="required" [(value)]="url.group">
             <mat-option value="people">people</mat-option>
             <mat-option value="starships">ships</mat-option>
@@ -11,8 +11,11 @@
     <mat-form-field class="example-full-width">
         <input matInput placeholder="Search" required="required" name="search" [(ngModel)]="url.search">
     </mat-form-field>
-    <button (click)="onSubmit()" type="submit">Submit</button>
+    <div class="btn-row">
+        <button (click)="onSubmit()" type="submit" id="submit-btn">Submit</button>
+    </div>
 </form>
+<hr>
       
-{{url.group}}
-{{url.search}}
+<!-- {{url.group}} -->
+<!-- {{url.search}} -->
