--- a/src/app/frontend-search-function/frontend-search-function.component.css
+++ b/src/app/frontend-search-function/frontend-search-function.component.css
@@ -3,8 +3,10 @@
     max-width: 500px;
     width: 100%;
     margin: auto;
-    /* background-color: aquamarine; */
-    /* padding: 0px; */
+    /* color: white; */
+    background-color: rgb(255, 255, 255, 0.8);
+    border-radius: 50px;
+    padding: 15px;
 }
   
 .example-full-width {
@@ -21,14 +23,51 @@ mat-form-field {
 mat-label {
     margin: 5px 5px;
 }
+/* 
+#dd {
+    color: white;
+}
+
+#dd-label {
+    color: white;
+}
+
+#dd-opt {
+    color: white;
+    background-color: black;
+}
+
+#inpt {
+    color: white;
+    padding: 5px;
+}
+#inpt:placeholder-shown {
+    color: white !important;
+}
+#inpt::-webkit-input-placeholder {
+    color: white !important;
+}
+#inpt::-moz-placeholder {
+    color: white !important;
+}
+#inpt:-ms-input-placeholder {
+    color: white !important;
+}
+#inpt:-moz-placeholder {
+    color: white !important;
+} */
 
 #submit-btn {
     padding: 10px;
     border: none;
-    background-color: yellow;
+    background-color: var(--primary);
     border-radius: 15px;
     margin-bottom: 15px;
     font-size: 1.2em;
+}
+
+#submit-btn:hover {
+    background-color: var(--primary-dark)
 }
 
 .btn-row {
