got data passed to card component

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -10,7 +10,7 @@
         <p >eye color: {{eye_color}}  </p>
         <p >birth year: {{birth_year}}  </p>
         <p >gender: {{gender}}  </p>
-        <p >homeworld: </p>
+        <p >homeworld: {{homeworld}}</p>
     </div>
 
     <div  id="card">
@@ -25,19 +25,19 @@
         <p ></p>
     </div>
 
-        <div  id="card">
-            <h3 >Ship</h3>
-            <hr >
-            <p >Ship name: {{ship_name}}  </p>
-            <p >Model: {{model}}  </p>
-            <p >Cost in credits: {{cost_in_credits}} </p>
-            <p >Length: {{length}} </p>
-            <p >Max atmospheric speed: {{max_atmospheric_speed}} </p>
-            <p >Crew: {{crew}} </p>
-            <p > Passengers: {{passengers}} </p>
-            <p >Cargo capacity: {{cargo_capacity}} </p>
-            <p >Consumables: {{consumables}}  </p>
-            <p >Hyperdrive rating: {{hyperdrive_rating}} </p>
-            <p >mglt: {{mglt}} </p>
-        </div>
+    <div  id="card">
+        <h3 >Ship</h3>
+        <hr >
+        <p >Ship name: {{ship_name}}  </p>
+        <p >Model: {{model}}  </p>
+        <p >Cost in credits: {{cost_in_credits}} </p>
+        <p >Length: {{length}} </p>
+        <p >Max atmospheric speed: {{max_atmospheric_speed}} </p>
+        <p >Crew: {{crew}} </p>
+        <p > Passengers: {{passengers}} </p>
+        <p >Cargo capacity: {{cargo_capacity}} </p>
+        <p >Consumables: {{consumables}}  </p>
+        <p >Hyperdrive rating: {{hyperdrive_rating}} </p>
+        <p >mglt: {{mglt}} </p>
     </div>
+</div>
