cards displaying data

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,8 +1,7 @@
 <div  id="displayDiv">
-    <div  id="card">
-        <h3 >People</h3>
+    <div  id="peopleCard">
+        <h3 >{{name}}</h3>
         <hr >
-        <p >name:{{name}} </p>
         <p >height: {{height}} </p>
         <p >mass: {{mass}} </p>
         <p >hair color: {{hair_color}} </p>
@@ -13,10 +12,9 @@
         <p >homeworld: {{homeworld}}</p>
     </div>
 
-    <div  id="card">
-        <h3 >Films</h3>
+    <div  id="filmCard">
+        <h3 >{{title}} </h3>
         <hr >
-        <p >Title: {{title}}  </p>
         <p >Episode Id: {{episode_id}} </p>
         <p >Opening Crawl: {{opening_crawl}} </p>
         <p >Director: {{director}} </p>
@@ -25,10 +23,9 @@
         <p ></p>
     </div>
 
-    <div  id="card">
-        <h3 >Ship</h3>
+    <div  id="shipCard">
+        <h3 >{{ship_name}}</h3>
         <hr >
-        <p >Ship name: {{ship_name}}  </p>
         <p >Model: {{model}}  </p>
         <p >Cost in credits: {{cost_in_credits}} </p>
         <p >Length: {{length}} </p>
