got it to show a single card

--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -2,8 +2,8 @@
     border: 1px solid black;
    
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    background-color: rgb(192, 192, 192);
+    grid-template-rows: 1fr;
+    /* background-color: rgb(192, 192, 192); */
     padding: 10px;
 
 }
