--- a/src/app/frontend-search-function/frontend-search-function.component.html
+++ b/src/app/frontend-search-function/frontend-search-function.component.html
@@ -9,7 +9,7 @@
     </mat-form-field>
       
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="Search" required="required" name="search" id="inpt" [(ngModel)]="url.search">
+        <input matInput placeholder="Search" required="required" name="search" id="input" [(ngModel)]="url.search">
     </mat-form-field>
     <div class="btn-row">
         <button (click)="onSubmit()" type="submit" id="submit-btn">Submit</button>
