--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -8,27 +8,12 @@
 
 }
 
-#peopleCard{
+.card{
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);
   padding: 5px;
   font-size: 30px;
   text-align: center;
-  margin:20px;
-}
-#filmCard{
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  padding: 5px;
-  font-size: 30px;
-  text-align: center;
-  margin:20px;
-}
-#shipCard{
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  padding: 5px;
-  font-size: 30px;
-  text-align: center;
-  margin:20px;
+  margin: 20px;
+  border-radius: 50px;
 }
