--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,4 +1,4 @@
-<div  id="displayDiv">
+<div  id="displayDiv" *ngIf="data">
     <div class="card" *ngIf="data.mass !== undefined">
         <h3 >{{name}}</h3>
         <hr >
